E2J/part4/t37.output
running e2j
compiling the Java generated code
My_e2j.java:16: error: variable x_a is already defined in method main(String[])
int x_a;
    ^
My_e2j.java:29: error: variable x_a is already defined in method main(String[])
int x_a;
    ^
My_e2j.java:42: error: variable x_a is already defined in method main(String[])
int x_a;
    ^
3 errors
